# data5006-movie-recommender

./: .gitignore  .pre-commit-config.yaml  README.md  app.ipynb  app.py  calculate_similarity.ipynb  calculate_similarity.py  constants.ipynb  constants.py  data.ipynb  data.py  fetch_dataset.ipynb  fetch_dataset.py  pyproject.toml  recommendation_system.ipynb  recommendation_system.py  similarity.ipynb  similarity.py  utils.ipynb  utils.py
